--- a/server/static/css/baseline.css
+++ b/server/static/css/baseline.css
@@ -110,8 +110,8 @@ body.loading .loadingModal {
 .dialogstory {
     position: relative;
     z-index: 1;
-    width: 290px;
-    height: 320px;
+    width: 309px;
+    height: 300px;
     border: 2px solid #CCC;
     text-align: center;
     font-size: 14px;
@@ -208,11 +208,11 @@ body.loading .loadingModal {
     cursor: pointer;
 }
 .left {
-    position: absolute;
+    position: relative;
     max-width: 30px;
     max-height: 30px;
     top: 0;
-    right: 95px;
+    /*right: 95px;*/
     opacity: 0.2;
 }
 
@@ -221,11 +221,11 @@ body.loading .loadingModal {
     cursor: pointer;
 }
 .right {
-    position: absolute;
+    position: relative;
     max-width: 30px;
     max-height: 30px;
     top: 0;
-    right: 60px;
+    left: 0px;
     opacity: 0.2;
 }
 
